# workshop-python-aula08-jornada

./: README.md  dados.parquet  etl.py  etl_com_logger.py  exemplo_logger_erros.py  exemplo_logger_rotation_file.py  pipeline_logger_decorator.py  pyproject.toml  soma.py  utils_logger.py
