[tool.poetry]
name = "workshop-python-aula08"
version = "0.1.0"
description = ""
authors = ["Thiago Ferraz <thiagovdferraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.4"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"
loguru = "^0.7.2"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
